Correct Character title alignment

--- a/css/master.css
+++ b/css/master.css
@@ -71,7 +71,7 @@ h2
 
 .search-container
 {
-    float: right;
+    text-align: right;
 }
 
 /* Tooltip container */
@@ -99,6 +99,8 @@ h2
     width: 240px;
     padding: 5px 0;
 
+    text-align: left;
+
     color: #fff;
     border-radius: 6px;
     background-color: black;
@@ -108,4 +110,9 @@ h2
 .tooltip:hover .tooltiptext
 {
     visibility: visible;
+}
+
+.tooltip .title
+{
+    font-weight: bold;
 }
